-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Feature Freeze
-
ProductName: macOS
ProductVersion: 11.6
BuildVersion: 20G165
-
-
00a5ff244df9564d4bca3eaa51e2fb744ec873ab (qt/qttools/dev)
Install Qt6.3.0 binaries on macOS (11.6 used in report, reproduces also on 10.14 and 10.15) and launch Designer, crashes with:
Qt Designer: The QQuickWidget custom widget plugin is disabled because it requires OpenGL RHI (current: 6).
QQuickWidget is only supported on OpenGL. Use QQuickWindow::setGraphicsApi() to override the default.
Segmentation fault: 11
- is cloned by
-
QTBUG-100441 [REG 6.2.1->6.3.0] Designer not launching on macOS x64
-
- Closed
-
- relates to
-
QTCREATORBUG-27807 Embedded Qt Designer does not support QWebEngineView
-
- Closed
-
-
QTBUG-108557 Qt Designer: Implement a lightweight dummy plugin for QWebEngineView
-
- Reported
-
For Gerrit Dashboard: QTBUG-98472 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
382411,3 | Qt Designer: Fix crash on macOS due to QQuickWidget graphics API mismatch | dev | qt/qttools | Status: MERGED | +2 | 0 |
430605,2 | Qt Designer: Enable QQuickWidget for all Graphics APIs | dev | qt/qttools | Status: MERGED | +2 | 0 |