Qt Designer: Fix crash on macOS due to QQuickWidget graphics API mismatch

Move the check to the factory function of the plugin to suppress
creation for determining the default properties.

Amends 2adb1111e2320b53879600fb932a490b3ab0d332.

Fixes: QTBUG-98472
Change-Id: Ib7f1d689b3607a89efbd7c2fa4f9cfb6b3a0b5a5
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>